<resources>
    <string name="app_name">甜心交友</string>
    <string name="zc_info">在使用我方平台服务时，您应当按我方平台页面的提示准确完整地提供您的信息（包括您的姓名及电子邮件地址、联系电话、联系地址等），以便我方在必要时与您联系。您了解并同意，您有义务保持您提供信息的真实性及有效性。 您所设置的账户名不得违反国家法律法规及我方平台规则关于账户名的管理规定，否则我方可对您的账户名进行暂停使用或注销等处理，并向主管机关报告。 您理解并承诺，您的账户名称、头像和简介等注册信息中不得出现违法和不良信息，没有冒用、关联机构或社会名人，您在账户注册过程中需遵守法律法规、社会主义制度、国家利益、公民合法权益、公共秩序、社会道德风尚和信息真实性等七条底线，使用本应用仅需20元/月。 您同意并授权，为了更好的为您提供服务以及确保您的账户安全，我方可以根据您提供的手机号码、身份证号码等信息，向全国公民身份号码查询服务中心、电信运营商、金融服务机构等可靠单位发起用户身份真实性、用户征信记录、用户手机号码有效性状态等情况的查询。 您的账户为您自行设置并由您保管。建议您务必保管好您的账户，并确保您在每个上网时段结束时退出登录并以正确步骤离开我方平台。 账户因您主动泄露或遭受他人攻击、诈骗等行为导致的损失及后果，均由您自行承担。 您的账户只限您本人使用，不得出借或分享他人使用。当您的账户遭到未经授权的使用时，您应当立即通知我方平台，否则未经授权的使用行为均视为您本人的行为，您将自行承担所有由此导致的损失及后果。 除我方存在过错外，您应对您账户项下的所有行为结果（包括但不限于在线签署各类协议、发布信息、购买商品及服务及披露信息等）负责。 如发现任何未经授权使用您账户登录我方平台或其他可能导致您账户遭窃、遗失的情况，建议您立即通知我方。您理解我方对您的任何请求采取行动均需要合理时间，除我方存在过错外，我方对在采取行动前已经产生的后果不承担任何责任。</string>
    <string name="xw_ptr_pull_to_refresh">下拉刷新</string>
    <string name="xw_ptr_release_to_refresh">释放立即刷新</string>
    <string name="xw_ptr_refreshing">正在刷新…</string>
    <string name="xw_ptr_refresh_succeeded">刷新成功</string>
    <string name="xw_ptr_refresh_failed">刷新失败</string>
    <string name="xw_ptr_pull_up_to_load">上拉加载更多</string>
    <string name="xw_ptr_release_to_load">释放立即加载</string>
    <string name="xw_ptr_loading">正在加载…</string>
    <string name="xw_ptr_load_succeeded">加载成功</string>
    <string name="xw_ptr_load_failed">加载失败</string>
    <string name="action_settings">Settings</string>
    <string name="action_select_file">导入书本</string>
    <string name="action_search_file">搜索文件</string>
    <string name="action_add_bookmark">添加书签</string>
    <string name="press_twice_to_exit">连续点击才能退出</string>
    <string name="root">根目录</string>
    <string name="add_files">加入书架</string>
    <string name="choose_all">全选</string>
    <string name="delete">取消</string>
    <string name="bookpop_size">字体</string>
    <string name="bookpop_light">亮度</string>
    <string name="bookpop_card">书签</string>
    <string name="bookpop_send">跳转</string>
    <string name="read_setting_directory">目录</string>
    <string name="read_setting_night">夜间</string>
    <string name="read_setting_day">日间</string>
    <string name="read_setting_pagemode">翻页</string>
    <string name="read_setting_set">设置</string>
    <string name="read_setting_pre">上一章</string>
    <string name="read_setting_next">下一章</string>
    <string name="setting_system">系统</string>
    <string name="setting_dark">暗</string>
    <string name="setting_bright">亮</string>
    <string name="setting_add">A+</string>
    <string name="setting_subtract">A-</string>
    <string name="setting_default">默认</string>
    <string name="font_default">系统默认</string>
    <string name="font_qihei">羿创旗黑</string>
    <string name="font_xinshou">新宋体</string>
    <string name="font_wawa">娃娃体</string>
    <string name="font_fzxinghei">行黑</string>
    <string name="font_fzkatong">卡通</string>
    <string name="font_bysong">繁宋体</string>
    <string name="page_mode_simulation">仿真</string>
    <string name="page_mode_cover">覆盖</string>
    <string name="page_mode_slide">滑动</string>
    <string name="page_mode_none">无</string>
    <string name="readseting">设置</string>
    <string name="mesextr">上万部高清大片等你看</string>
    <string name="personal">我的中心</string>
    <string name="eorrtext">没有更多数据了</string>
    <string name="eorrfali">获取数据失败</string>
    <string name="eorrfali2">当前网络状态异常 请稍后再重试</string>
    <string name="eorrfali3">服务器请求失败，请稍后再试</string>
    <string name="eorrfali4">匹配失败 请稍后再试</string>
    <string name="eorrfali5">礼物数据有误</string>
    <string name="text11">正在清理</string>
    <string name="text22">已清除缓存</string>
    <string name="textsevf">设置</string>
    <string name="ts10">结算帐户</string>
    <string name="ts1">修改资料</string>
    <string name="tes2">修改密码</string>
    <string name="ts3">清除缓存</string>
    <string name="ts4">当前版本</string>
    <string name="ts5">检查更新</string>
    <string name="ts6">版本介绍</string>
    <string name="ts7">已是最新版本</string>
    <string name="ts611">用户协议</string>
    <string name="ts612">隐私政策</string>
    <string name="ts613">平台规范</string>
    <string name="ts614">联系客服</string>
    <string name="second">服务次数</string>
    <string name="duration">服务时长</string>
    <string name="sex0">男神</string>
    <string name="sex1">女神</string>
    <string name="toastShor">再按一次退出程序</string>
    <string name="album">我的相册</string>
    <string name="myvideo">我的视频</string>
    <string name="album2">展示相册</string>
    <string name="tvupdate">更新时间</string>
    <string name="tvmsgexit">您将无法接收消息，您确定要退出吗？</string>
    <string name="rtc_room_input_error_tip">"房间号和用户名不能为空"</string>
    <string name="rtc_permisson_error_tip">"用户没有允许需要的权限，加入通话失败"</string>
    <string name="main_trtc_title">"腾讯云TRTC"</string>
    <string name="main_item_trtc">"视频通话"</string>
    <string name="main_item_live">"视频直播"</string>
    <string name="main_item_screen">"屏幕分享"</string>
    <string name="main_item_custom_capture">"自定义采集"</string>
    <string name="main_item_custom_capturea">"登录帐号"</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_ok">确定</string>
    <string name="vod_ffplay">ffplay</string>
    <string name="vod_exo">exo</string>
    <string name="title_activity_rtmp_room_demo">RtmpRoomDemoActivity</string>
    <string name="str_room_id_tips">输入房间号</string>
    <string name="str_user_id_tips">输入用户名</string>
    <string name="main_privacy_text" translatable="false">点击查看<a href="http://privacy.qq.com/">隐私政策</a></string>
    <string name="working">正在运行中</string>
    <string name="NewMsg">最新消息</string>
    <string name="chat_top">置顶聊天</string>
    <string name="chat_delete">删除聊天</string>
    <string name="quit_chat_top">取消置顶</string>
    <string name="account">用户名</string>
    <string name="password">密码</string>
    <string name="login_title">登录·即时通信</string>
    <string name="login_sub_title">体验群组聊天，音视频对话等 IM 功能</string>
    <string name="input_number">请输入手机号</string>
    <string name="input_verification">请输入短信验证码</string>
    <string name="verification_code">获取验证码</string>
    <string name="button_login">登录</string>
    <string name="password_login">密码登录</string>
    <string name="official_website">访问官网</string>
    <string name="debug_mode_summary">IM 账号直接登录界面，此只在 Debug 模式下显示</string>
    <string name="account_hint">任意非空字符即可，请参考类注释</string>
    <string name="profile">我</string>
    <string name="profilex">快捷用语</string>
    <string name="promisc">音乐播放</string>
    <string name="gpsamp">发送位置</string>
    <string name="id">账号：%1$s</string>
    <string name="modify_user_icon">修改头像</string>
    <string name="modify_nick_name">修改昵称</string>
    <string name="modify_signature">修改个性签名</string>
    <string name="add_rule">加我为好友时</string>
    <string name="allow_type_allow_any">允许任何人</string>
    <string name="allow_type_deny_any">拒绝任何人</string>
    <string name="allow_type_need_confirm">需要验证</string>
    <string name="exit">退出登录</string>
    <string name="about_im">关于即时通信IM</string>
    <string name="tab_contact_tab_text">通讯录</string>
    <string name="tab_conversation_tab_text">消息</string>
    <string name="tab_profile_tab_text">我</string>
    <string name="tab_scenes_tab_text">直播</string>
    <string name="add_friend">添加好友</string>
    <string name="add_group">添加群聊</string>
    <string name="start_conversation">发起聊天</string>
    <string name="create_group_chat">发起群聊</string>
    <string name="create_chat_room">发起聊天室</string>
    <string name="create_private_group">发起讨论组</string>
    <string name="hint_add_user_id">请输入对方帐号</string>
    <string name="hint_add_user_id2">请输入需要加入的群号</string>
    <string name="hint_add_wording">输入请求验证消息</string>
    <string name="hint_add_wording2">张三</string>
    <string name="contact_add">添加</string>
    <string name="contact_add2">发送请求</string>
    <string name="user_id">对方ID</string>
    <string name="add_wording">添加好友申请</string>
    <string name="add_wording3">输入对方帐号</string>
    <string name="add_wording2">设置备注内容</string>
    <string name="tips_empty_group_member">请选择群成员</string>
    <string name="tips_empty_group_type">请选择加群方式</string>
    <string name="no_friend_apply">暂无好友申请</string>
    <string name="request_agree">同意</string>
    <string name="request_accepted">已接受</string>
    <string name="request_waiting">等待验证</string>
    <string name="test_custom_action">自定义消息</string>
    <string name="test_custom_message">查看详情>></string>
    <string name="live_scenes_live_room">视频直播</string>
    <string name="live_scenes_voice_room">语音聊天室</string>
    <string name="live_voice_room_room_title" formatted="false">房间号: %d</string>
    <string name="live_voice_room_numer_format" formatted="false">%d人在看</string>
    <string name="live_voice_room_agree">同意</string>
    <string name="live_voice_room_warning_not_empty">"输入不能为空!"</string>
    <string name="live_voice_room_send">发送</string>
    <string name="live_voice_room_already_agree">已同意</string>
    <string name="live_voice_room_main_title" formatted="false">%1s(%2d)</string>
    <string name="live_is_over">直播已结束</string>
    <string name="viptype">此视频仅限会员观看</string>
    <string name="onfall">请求数据异常...</string>
    <string name="isNetworkAvailable">网络异常，请稍后重试</string>
    <string name="dialoged">您的金币不足，别错过您的意中人哦</string>
    <string name="dialogjb">立即充值</string>
    <string name="dialogmsgboot2" translatable="false">充值表示已阅读并同意<a href="http://privacy.qq.com/">用户充值协议</a></string>
    <string name="dialogjinbi">金币</string>
    <string name="showgetcon">您未选择赠送礼物</string>
    <string name="showgetcoabc">扣除金失败,请重试...</string>
    <string name="resmoney">￥%s/天</string>
    <string name="mycodemsghin">请请入验证码</string>
    <string name="regMessage">请稍等%s秒后再试</string>
    <string name="nametoashow">请先完成实名认证</string>
    <string name="tvmsg_t1">请填写本人实名信息，如非本人实名将无法提现</string>
    <string name="dialog_msg_svip">升级VIP会员可查看TA的详情资料</string>
    <string name="dialog_msg_svip1">升级VIP会员查看TA的视频</string>
    <string name="dialog_msg_svip65">升级VIP会员立即进入匹配</string>
    <string name="dialog_msg_svip66">升级VIP会员可免费进入</string>
    <string name="dialog_msg_svip67">非VIP会员无权播放,请升级VIP</string>
    <string name="dialog_msg_svi888">此视频仅限VIP会员播放</string>
    <string name="idnumbertext">请输入身份证号</string>
    <string name="edit_name">请输入真实姓名</string>
    <string name="dialog_load">正在提交请稍后</string>
    <string name="show_tv1">真实姓名不能空</string>
    <string name="show_tv2">身份证号不能小于15~18位数</string>
    <string name="ladmsg">加载中，请稍后</string>
    <string name="svip1">此视频仅限会员观看</string>
    <string name="svip2">开通VIP会员</string>
    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>
    <string name="tvvip">升级VIP会员</string>
    <string name="dialog_tvvip1">VIP会员内容非常精彩，您懂的！</string>
    <string name="tvvip1">隐藏内容非常精彩，您懂的！</string>
    <string name="tvvip2">隐藏的图片内容仅限VIP会员浏览！</string>
    <string name="tvvip3">该套图有图片 %s 张</string>
    <string name="dialog_tvvip4">此内容仅限VIP会员浏览</string>
    <string name="tvvip4">该视频仅限VIP会员观看</string>
    <string name="tv_msg_11268">帐号注销</string>
    <string name="title_chat">聊天收费设置</string>
    <string name="chat_aa1">视频聊天</string>
    <string name="chat_aa2">语音聊天</string>
    <string name="chat_aa3">文字聊天</string>
    <string name="chat_aa4_msg">我的等级LV0 等级越高可设置金币越高</string>
    <string name="ta4">聚会主题</string>
    <string name="ta5">聚会时间</string>
    <string name="ta6">聚会地点</string>
    <string name="ta7">活动标签</string>
    <string name="ta8">买单方式</string>
    <string name="ta9">邀请人数</string>
    <string name="ta10">聚会介绍</string>
    <string name="ta91">报名人数</string>
    <string name="ta92">简单介绍一下你的聚会</string>
    <string name="ta93">关闭聚会</string>
    <string name="ta94">待审核</string>
    <string name="tssss1">聚会主题</string>
    <string name="paysss1">活动已结束</string>
    <string name="tt1">0金币/分钟</string>
    <string name="tt2">0金币/分钟</string>
    <string name="tt3">0金币/每条</string>
    <string name="tt4">0金币/单次</string>
    <string name="tt10">联系方式</string>
</resources>